<resources>
    <string name="app_name">Lop</string>


    <string name="action_settings">Settings</string>
    <string name="lop_btn_start">Start</string>
    <string name="lop_history">Video Path: </string>
    <string name="lop_empty_result_hint">Tips: After recording finished, please tap the notification to display video.</string>
    <string name="lop_service_started">Recording service is running...</string>
    <string name="lop_stop">Stop</string>

    <string name="lop_ntf_title_record_finish">Record has been finished,tap to display.</string>
    <string name="lop_setting_show_stop_title">Show \"Stop\" button on status bar</string>
    <string name="lop_setting_show_stop_title_key">stopVisable</string>
    <string name="lop_setting_show_notification">Show Notification</string>
    <string name="lop_setting_show_notification_key">recordNotification</string>
    <string name="lop_setting_countdown">Two seconds countdown</string>
    <string name="lop_setting_countdown_key">countDownTime</string>
</resources>
