<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:text="@string/lop_btn_start"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/lop_history"
        android:textSize="18sp"
        android:visibility="visible"/>

    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/recyclerView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:overScrollMode="never"/>-->

    <TextView
        android:id="@+id/tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/lop_empty_result_hint"
        android:textSize="18sp"
        android:visibility="gone"/>

</LinearLayout>
